--- a/Assets/Scripts/Common/Common.asmdef
+++ b/Assets/Scripts/Common/Common.asmdef
@@ -1,13 +1,8 @@
 {
-    "name": "Aot",
+    "name": "Common",
     "rootNamespace": "",
     "references": [
-        "GUID:9e24947de15b9834991c9d8411ea37cf",
-        "GUID:84651a3751eca9349aac36a66bba901b",
-        "GUID:7cb2814e6655d904f952bf240b160d11",
-        "GUID:13ba8ce62aa80c74598530029cb2d649",
-        "GUID:1491147abca9d7d4bb7105af628b223e",
-        "GUID:eb99729bd0c404241a14fb5d3554a86f"
+        "GUID:1491147abca9d7d4bb7105af628b223e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
